--- a/css/product.css
+++ b/css/product.css
@@ -118,3 +118,15 @@
   width: 100%;
   margin-top: 40px;
 }
+
+/* Description Section */
+.description-section {
+  background-color: #0B1215;
+  color: #f3f4f6;
+  font-family: "articulat-cf", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 48px;
+  padding: 50px;
+  text-align: left;
+}
