--- a/css/product.css
+++ b/css/product.css
@@ -2,67 +2,72 @@
 .product-section {
   padding: 50px;
   background-color: #f3f4f6;
+  width: 100%;
+  height: 1145px;
 }
 
-.product-content {
+.product-content-container {
   display: flex;
   flex-direction: row;
-  max-width: 1200px;
-  margin: 0 auto;
-  gap: 30px;
-}
-
-.product-carousel {
-  flex: 1 1 50%;
-  display: flex;
+  gap: 50px;
+  width: 100%;
+  height: 95%;
   justify-content: center;
-  align-items: center;
 }
 
-.product-details {
-  flex: 1 1 50%;
+.product-image {
+  width: 866px;
+  height: 866px;
+  border: solid 4px #0B1215;
+}
+
+.product-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-details-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
 }
 
 .product-title {
   font-family: "ringold-sans", sans-serif;
   font-weight: 400;
-  text-decoration: none;
   font-size: 72px;
-  margin-bottom: 10px;
   color: #0B1215;
+  margin-bottom: -15px;
 }
 
 .product-artist {
   font-family: "coolvetica", sans-serif;
   font-weight: 400;
   font-style: italic;
-  font-size: 24px;
+  font-size: 40px;
   color: #0B1215;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .release-date {
   font-family: "articulat-cf", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 1rem;
+  font-size: 24px;
   color: #0B1215;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .separator {
-  border: none;
   border-top: 3px solid #0B1215;
-  margin: 20px 0;
 }
 
 .price-and-button {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  gap: 20px; /* Add space between the price and button */
+  gap: 200px;
+  margin: 30px 0;
 }
 
 .product-price {
@@ -71,11 +76,15 @@
   font-style: italic;
   font-size: 72px;
   color: #0B1215;
-  margin: 0; /* Ensure no extra margin on the price */
+}
+
+.product-buy-button {
+  position: relative;
+  top: -10px;
 }
 
 .track-list {
-  margin-top: 20px;
+  margin: 50px 0;
 }
 
 .track-list h3 {
@@ -83,8 +92,8 @@
   font-weight: 400;
   font-style: italic;
   font-size: 48px;
-  margin-bottom: 10px;
   color: #0B1215;
+  margin-bottom: 20px;
 }
 
 .track-list ol {
@@ -92,8 +101,10 @@
   font-weight: 500;
   font-style: normal;
   font-size: 24px;
-  padding-left: 20px;
+  margin-left: 55px;
   color: #0B1215;
+  line-height: 1.3;
+  margin-bottom: 10px;
 }
 
 .pressing-info h3 {
@@ -101,8 +112,8 @@
   font-weight: 400;
   font-style: italic;
   font-size: 24px;
-  margin-bottom: 10px;
   color: #0B1215;
+  margin: 20px 0;
 }
 
 .pressing-info p {
@@ -110,7 +121,7 @@
   font-weight: 500;
   font-style: normal;
   font-size: 24;
-  line-height: 1.5;
+  line-height: 1.8;
   color: #0B1215;
 }
 
