refactored file structure

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 /* About Section */
 .about-section {
-    background-color: #0B1215; /* Dark background */
+    background-color: #1b1b1b; /* Dark background */
     padding: 40px 20px;
     color: #F3F4F6; /* Light text color */
     text-align: center;
