--- a/about/about.css
+++ b/about/about.css
@@ -1,63 +1,60 @@
 /* About Section */
 .about-section {
-    background-color: #0b1215; /* Dark background */
-    padding: 40px 20px;
-    color: #F3F4F6; /* Light text color */
-    text-align: center;
-  }
+  background-color: #0b1215;
+  padding: 40px 20px;
+  color: #F3F4F6;
+  text-align: center;
+}
   
-  /* Heading */
-  .about-heading {
-    font-family: "ringold-sans", sans-serif;
-    font-size: 48px;
-    font-weight: bold;
-    margin-bottom: 40px;
-  }
-  
-  /* About Content */
+.about-heading {
+  font-family: "ringold-sans", sans-serif;
+  font-size: 128px;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+
+.about-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.about-image-container {
+  background-color: #F3F4F6;
+  width: 100%;
+  padding-top: 56.25%;
+  position: relative;
+  border: 4px solid #0B1215;
+  margin-bottom: 20px;
+}
+
+.about-text {
+  font-family: "articulat-cf", sans-serif;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 1.8;
+  text-align: left;
+}
+
+.about-text p {
+  margin-bottom: 20px;
+}
+
+/* Responsive Design */
+@media (min-width: 768px) {
   .about-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
   }
-  
-  /* About Image */
-  .about-image-container {
-    background-color: #E6E6E6; /* Placeholder color */
-    width: 100%;
-    padding-top: 56.25%; /* Maintain 16:9 aspect ratio */
-    position: relative;
-    border: 4px solid #0B1215;
-    margin-bottom: 20px;
-  }
-  
-  /* About Text */
+
   .about-text {
-    font-family: "articulat-cf", sans-serif;
-    font-size: 18px;
-    line-height: 1.8;
     text-align: left;
   }
-  
-  .about-text p {
-    margin-bottom: 20px;
+
+  .about-image-container {
+    margin-bottom: 0;
   }
-  
-  /* Responsive Design */
-  @media (min-width: 768px) {
-    .about-content {
-      grid-template-columns: 1fr 1fr; /* Image and text side by side */
-      align-items: center;
-    }
-  
-    .about-text {
-      text-align: left; /* Align text to the left for wider screens */
-    }
-  
-    .about-image-container {
-      margin-bottom: 0;
-    }
-  }
+}
   
