--- a/shared-styles/global.css
+++ b/shared-styles/global.css
@@ -3,10 +3,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-  font-family: "articulat-cf", sans-serif;
   background-color: #0B1215;
-  color: #ffffff;
+  color: #F3F4F6;
 }
